[package]
name = "jsrs"
version = "0.1.0"
authors = ["playX <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgc-single-threaded = "0.1"
hashlink = "*"
fxhash = "0.2"
[features]
jsvalue64 = []
jsvalue32-64 = []
default = ["jsvalue64"]
